Removed petrel.ai links

--- a/src/index.html
+++ b/src/index.html
@@ -33,17 +33,8 @@
         <div class="container d-flex justify-content-between">
           <div class="d-inline-block">
             <div class="h4">Tech.Interview</div>
-            <div class="mt-3">
-              <div>Kazakhstan, Almaty</div>
-              <div>Baizakov st, 280. SmartPoint, office 214</div>
-            </div>
-
-            <div class="mt-3">
-              <div><strong>Phone</strong><span class="ms-3">+7 (727) 313 20 50</span></div>
-              <div><strong>Email</strong><span class="ms-3">info@petrel.ai</span></div>
-            </div>
-
-            <div class="mt-3">2022, © maximgorbatyuk, petrel.ai</div>
+            <div class="mt-3">Kazakhstan, Almaty</div>
+            <div class="mt-3">2022, © maximgorbatyuk</div>
           </div>
 
           <div class="d-inline-block">
