--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,10 @@
           <div class="d-inline-block">
             <div class="h4">Tech.Interview</div>
             <div class="mt-3">Kazakhstan, Almaty</div>
-            <div class="mt-3">2024, © maximgorbatyuk</div>
+            <div class="mt-3">
+              2024, 
+              <a class="footer-link" href="https://mgorbatyuk.dev" target="_blank">© maximgorbatyuk</a>
+            </div>
           </div>
 
           <div class="d-inline-block">
