--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="description" content="Here you can store your technical interview notes and share them" />
     <meta name="keywords" content="technical interview, interview,coding" />
-    <meta name="copyright" content="Maxim Gorbatyuk and petrel.ai, LLC" />
+    <meta name="copyright" content="Maxim Gorbatyuk" />
 
     <meta property="og:title" content="Tech.Interview" />
     <meta property="og:description" content="Here you can store your technical interview notes and share them" />
