--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <meta name="twitter:title" content="Tech.Interview" />
     <meta name="twitter:description" content="Here you can store your technical interview notes and share them" />
     <meta name="twitter:site" content="@techinterview" />
+    <meta name="twitter:creator" content="@maximgorbatyuk" />
   </head>
   <body class="d-flex flex-column h-100">
     <app-root></app-root>
