--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="ru" class="h-100">
   <head>
     <meta charset="utf-8" />
     <title>Tech.Interview</title>
@@ -8,12 +8,12 @@
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <meta name="description" content="Here you can store your technical interview notes and share them" />
-    <meta name="keywords" content="technical interview, interview,coding" />
+    <meta name="description" content="Зарплаты в IT в Казахстане" />
+    <meta name="keywords" content="salaries, statistic, technical interview, interview, coding" />
     <meta name="copyright" content="Maxim Gorbatyuk" />
 
     <meta property="og:title" content="Tech.Interview" />
-    <meta property="og:description" content="Here you can store your technical interview notes and share them" />
+    <meta property="og:description" content="Зарплаты в IT в Казахстане" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://techinterview.space/" />
     <meta property="og:image" content="https://techinterview.space/assets/img/ti_logo_mini.png" />
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://techinterview.space/assets/img/ti_logo_mini.png" />
     <meta name="twitter:title" content="Tech.Interview" />
-    <meta name="twitter:description" content="Here you can store your technical interview notes and share them" />
+    <meta name="twitter:description" content="Зарплаты в IT в Казахстане" />
     <meta name="twitter:site" content="@techinterview" />
     <meta name="twitter:creator" content="@maximgorbatyuk" />
   </head>
@@ -34,7 +34,7 @@
         <div class="container d-flex justify-content-between">
           <div class="d-inline-block">
             <div class="h4">Tech.Interview</div>
-            <div class="mt-3">Kazakhstan, Almaty</div>
+            <div class="mt-3">Алматы, Казахстан</div>
             <div class="mt-3">
               2024, 
               <a class="footer-link" href="https://mgorbatyuk.dev" target="_blank">© maximgorbatyuk</a>
@@ -42,20 +42,20 @@
           </div>
 
           <div class="d-inline-block">
-            <div class="h4">Useful links</div>
+            <div class="h4">Ссылки</div>
             <ul class="mt-3 no-bullets">
               <li>
-                <a class="footer-link" href="/"><i class="bi bi-chevron-right"></i><span class="ms-2">Home</span></a>
+                <a class="footer-link" href="/"><i class="bi bi-chevron-right"></i><span class="ms-2">Главная</span></a>
               </li>
               <li>
-                <a class="footer-link" href="/agreements/privacy-policy"
-                  ><i class="bi bi-chevron-right"></i><span class="ms-2">Privacy policy</span></a
-                >
+                <a class="footer-link" href="/agreements/privacy-policy">
+                  <i class="bi bi-chevron-right"></i><span class="ms-2">Пользовательское соглашение</span>
+                </a>
               </li>
               <li>
-                <a class="footer-link" href="/about-us"
-                  ><i class="bi bi-chevron-right"></i><span class="ms-2">About us</span></a
-                >
+                <a class="footer-link" href="/about-us">
+                  <i class="bi bi-chevron-right"></i><span class="ms-2">О нас</span>
+                </a>
               </li>
             </ul>
           </div>
