--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
     <meta property="og:description" content="Зарплаты в IT в Казахстане" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://techinterview.space/" />
-    <meta property="og:image" content="https://techinterview.space/assets/img/ti_logo_mini.png" />
+    <meta property="og:image" content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png" />
     <meta property="og:site_name" content="techinterview.space" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://techinterview.space/assets/img/ti_logo_mini.png" />
+    <meta name="twitter:image" content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png" />
     <meta name="twitter:title" content="Tech.Interview" />
     <meta name="twitter:description" content="Зарплаты в IT в Казахстане" />
     <meta name="twitter:site" content="@techinterview" />
