--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,38 @@
 <html lang="ru" class="h-100">
   <head>
     <meta charset="utf-8" />
-    <title>Tech.Interview</title>
+    <title>Techinterview.space</title>
     <base href="/" />
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="description" content="Зарплаты в IT в Казахстане" />
-    <meta name="keywords" content="salaries, statistic, technical interview, interview, coding" />
+    <meta
+      name="keywords"
+      content="salaries, statistic, technical interview, interview, coding"
+    />
     <meta name="copyright" content="Maxim Gorbatyuk" />
 
-    <meta property="og:title" content="Tech.Interview" />
+    <meta property="og:title" content="techinterview.space" />
     <meta property="og:description" content="Зарплаты в IT в Казахстане" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://techinterview.space/" />
-    <meta property="og:image" content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png" />
+    <meta property="og:url" content="https://techinterview.space" />
+    <meta
+      property="og:image"
+      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
+    />
     <meta property="og:site_name" content="techinterview.space" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png" />
-    <meta name="twitter:title" content="Tech.Interview" />
+    <meta
+      name="twitter:card"
+      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
+    />
+    <meta
+      name="twitter:image"
+      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
+    />
+    <meta name="twitter:title" content="techinterview.space" />
     <meta name="twitter:description" content="Зарплаты в IT в Казахстане" />
     <meta name="twitter:site" content="@techinterview" />
     <meta name="twitter:creator" content="@maximgorbatyuk" />
@@ -33,11 +45,18 @@
       <div class="py-5 footer-wrapper">
         <div class="container d-flex justify-content-between">
           <div class="d-inline-block">
-            <div class="h4">Tech.Interview</div>
+            <div class="h4">
+              <a class="footer-link" href="/">Techinterview.space</a>
+            </div>
             <div class="mt-3">Алматы, Казахстан</div>
             <div class="mt-3">
-              2024, 
-              <a class="footer-link" href="https://mgorbatyuk.dev" target="_blank">© maximgorbatyuk</a>
+              2024,
+              <a
+                class="footer-link"
+                href="https://mgorbatyuk.dev"
+                target="_blank"
+                >© maximgorbatyuk</a
+              >
             </div>
           </div>
 
@@ -45,16 +64,15 @@
             <div class="h4">Ссылки</div>
             <ul class="mt-3 no-bullets">
               <li>
-                <a class="footer-link" href="/"><i class="bi bi-chevron-right"></i><span class="ms-2">Главная</span></a>
-              </li>
-              <li>
-                <a class="footer-link" href="/agreements/privacy-policy">
-                  <i class="bi bi-chevron-right"></i><span class="ms-2">Пользовательское соглашение</span>
+                <a class="footer-link" href="/about-us">
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2">О нас</span>
                 </a>
               </li>
               <li>
-                <a class="footer-link" href="/about-us">
-                  <i class="bi bi-chevron-right"></i><span class="ms-2">О нас</span>
+                <a class="footer-link" href="/agreements/privacy-policy">
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2">Пользовательское соглашение</span>
                 </a>
               </li>
             </ul>
