--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
       content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
     />
     <meta
+      name="googlebot"
+      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+    />
+    <meta
       name="keywords"
       content="salaries, statistic, technical interview, interview, coding"
     />
