--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,12 @@
                   ><span class="ms-2">Пользовательское соглашение</span>
                 </a>
               </li>
+              <li>
+                <a class="footer-link" href="/?uwu=true">
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2">UwU?</span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
