Added link to partner resource

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,16 @@
                 </a>
               </li>
               <li>
+                <a
+                  class="footer-link"
+                    href="https://techhunter.kz"
+                    target="_blank"
+                    title="Портал вакансий в IT в Казахстане">
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2">Вакансии на techhunter.kz</span>
+                </a>
+              </li>
+              <li>
                 <a class="footer-link" href="/?uwu=true">
                   <i class="bi bi-chevron-right"></i
                   ><span class="ms-2">UwU?</span>
