--- a/src/index.html
+++ b/src/index.html
@@ -10,36 +10,44 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta
       name="description"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим" />
+      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+    />
     <meta
       name="googlebot"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим" />
+      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+    />
     <meta
       name="keywords"
-      content="salaries, statistic, technical interview, interview, coding" />
+      content="salaries, statistic, technical interview, interview, coding"
+    />
     <meta name="copyright" content="Maxim Gorbatyuk" />
 
     <meta property="og:title" content="techinterview.space" />
     <meta
       property="og:description"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим" />
+      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://techinterview.space" />
     <meta
       property="og:image"
-      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png" />
+      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
+    />
     <meta property="og:site_name" content="techinterview.space" />
 
     <meta
       name="twitter:card"
-      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png" />
+      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
+    />
     <meta
       name="twitter:image"
-      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png" />
+      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
+    />
     <meta name="twitter:title" content="techinterview.space" />
     <meta
       name="twitter:description"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим" />
+      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+    />
     <meta name="twitter:site" content="@techinterview" />
     <meta name="twitter:creator" content="@maximgorbatyuk" />
   </head>
@@ -86,7 +94,8 @@
                   href="https://techhunter.kz"
                   target="_blank"
                   title="Портал вакансий в IT в Казахстане"
-                  rel="noopener noreferrer">
+                  rel="noopener noreferrer"
+                >
                   <i class="bi bi-chevron-right"></i
                   ><span class="ms-2">Вакансии на techhunter.kz</span>
                 </a>
