--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,24 @@
           </div>
 
           <div class="d-inline-block">
+            <div class="h4">Наши друзья</div>
+            <ul class="mt-3 no-bullets">
+              <li>
+                <a
+                  class="footer-link"
+                  href="https://techhunter.kz?utm=techinterview.space"
+                  target="_blank"
+                  title="Портал вакансий в IT в Казахстане"
+                  rel="noopener noreferrer"
+                >
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2">Вакансии на techhunter.kz</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="d-inline-block">
             <div class="h4">Ссылки</div>
             <ul class="mt-3 no-bullets">
               <li>
@@ -86,18 +104,6 @@
                 <a class="footer-link" href="/agreements/privacy-policy">
                   <i class="bi bi-chevron-right"></i
                   ><span class="ms-2">Пользовательское соглашение</span>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer-link"
-                  href="https://techhunter.kz"
-                  target="_blank"
-                  title="Портал вакансий в IT в Казахстане"
-                  rel="noopener noreferrer"
-                >
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">Вакансии на techhunter.kz</span>
                 </a>
               </li>
               <li>
