Added link to page with tg bot info

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,12 @@
                 </a>
               </li>
               <li>
+                <a class="footer-link" href="/about-telegram-bot">
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2">О телеграм боте</span>
+                </a>
+              </li>
+              <li>
                 <a class="footer-link" href="/agreements/privacy-policy">
                   <i class="bi bi-chevron-right"></i
                   ><span class="ms-2">Пользовательское соглашение</span>
