--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,19 @@
               <li>
                 <a
                   class="footer-link"
-                  href="https://techhunter.kz?utm=techinterview.space"
+                  href="https://maximgorbatyuk.notion.site/e7e9dbadcbf54030b3b92105d96cd98d?utm_source=techinterview.space"
+                  target="_blank"
+                  title="База знаний по ИП в Казахстане"
+                  rel="noopener noreferrer"
+                >
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2">База знаний по ИП в Казахстане</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-link"
+                  href="https://techhunter.kz?utm_source=techinterview.space"
                   target="_blank"
                   title="Портал вакансий в IT в Казахстане"
                   rel="noopener noreferrer"
