--- a/src/index.html
+++ b/src/index.html
@@ -91,13 +91,27 @@
               <li>
                 <a
                   class="footer-link"
-                  href="https://techhunter.kz?utm_source=techinterview.space"
+                  href="https://t.me/Projects_KZ"
                   target="_blank"
-                  title="Портал вакансий в IT в Казахстане"
+                  title="Сообщество проектных менеджеров в Телеграм"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">Вакансии на techhunter.kz</span>
+                  ><span class="ms-2">ТГ-канал @Projects_KZ</span>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-link"
+                  href="https://t.me/backenderskz"
+                  target="_blank"
+                  title="Сообщество бэкендеров в Телеграм"
+                  rel="noopener noreferrer"
+                >
+                  <i class="bi bi-chevron-right"></i
+                  ><span class="ms-2"
+                    >ТГ-канал @backenderskz (Kolesa Group)</span
+                  >
                 </a>
               </li>
             </ul>
