--- a/src/index.html
+++ b/src/index.html
@@ -56,95 +56,97 @@
 
     <div class="footer mt-auto d-block">
       <div class="py-5 footer-wrapper">
-        <div class="container d-flex justify-content-between">
-          <div class="d-inline-block">
-            <div class="h4">
-              <a class="footer-link" href="/">Techinterview.space</a>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 mobile-mb-3">
+              <div class="h4">
+                <a class="footer-link" href="/">Techinterview.space</a>
+              </div>
+              <div class="mt-3">Алматы, Казахстан</div>
+              <div class="mt-3">
+                2025,
+                <a
+                  class="footer-link"
+                  href="https://mgorbatyuk.dev"
+                  target="_blank"
+                  >© maximgorbatyuk</a
+                >
+              </div>
             </div>
-            <div class="mt-3">Алматы, Казахстан</div>
-            <div class="mt-3">
-              2025,
-              <a
-                class="footer-link"
-                href="https://mgorbatyuk.dev"
-                target="_blank"
-                >© maximgorbatyuk</a
-              >
-            </div>
-          </div>
 
-          <div class="d-inline-block">
-            <div class="h4">Наши друзья</div>
-            <ul class="mt-3 no-bullets">
-              <li>
-                <a
-                  class="footer-link"
-                  href="https://maximgorbatyuk.notion.site/e7e9dbadcbf54030b3b92105d96cd98d?utm_source=techinterview.space"
-                  target="_blank"
-                  title="База знаний по ИП в Казахстане"
-                  rel="noopener noreferrer"
-                >
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">База знаний по ИП в Казахстане</span>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer-link"
-                  href="https://t.me/Projects_KZ"
-                  target="_blank"
-                  title="Сообщество проектных менеджеров в Телеграм"
-                  rel="noopener noreferrer"
-                >
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">ТГ-канал @Projects_KZ</span>
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer-link"
-                  href="https://t.me/backenderskz"
-                  target="_blank"
-                  title="Сообщество бэкендеров в Телеграм"
-                  rel="noopener noreferrer"
-                >
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2"
-                    >ТГ-канал @backenderskz (Kolesa Group)</span
+            <div class="col-md-4 mobile-mb-3">
+              <div class="h4">Наши друзья</div>
+              <ul class="mt-3 no-bullets">
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://maximgorbatyuk.notion.site/e7e9dbadcbf54030b3b92105d96cd98d?utm_source=techinterview.space"
+                    target="_blank"
+                    title="База знаний по ИП в Казахстане"
+                    rel="noopener noreferrer"
                   >
-                </a>
-              </li>
-            </ul>
-          </div>
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2">База знаний по ИП в Казахстане</span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://t.me/Projects_KZ"
+                    target="_blank"
+                    title="Сообщество проектных менеджеров в Телеграм"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2">ТГ-канал @Projects_KZ</span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://t.me/backenderskz"
+                    target="_blank"
+                    title="Сообщество бэкендеров в Телеграм"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2"
+                      >ТГ-канал @backenderskz (Kolesa Group)</span
+                    >
+                  </a>
+                </li>
+              </ul>
+            </div>
 
-          <div class="d-inline-block">
-            <div class="h4">Ссылки</div>
-            <ul class="mt-3 no-bullets">
-              <li>
-                <a class="footer-link" href="/about-us">
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">О нас</span>
-                </a>
-              </li>
-              <li>
-                <a class="footer-link" href="/about-telegram-bot">
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">О телеграм боте</span>
-                </a>
-              </li>
-              <li>
-                <a class="footer-link" href="/agreements/privacy-policy">
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">Пользовательское соглашение</span>
-                </a>
-              </li>
-              <li>
-                <a class="footer-link" href="/?uwu=true">
-                  <i class="bi bi-chevron-right"></i
-                  ><span class="ms-2">UwU?</span>
-                </a>
-              </li>
-            </ul>
+            <div class="col-md-4">
+              <div class="h4">Ссылки</div>
+              <ul class="mt-3 no-bullets">
+                <li>
+                  <a class="footer-link" href="/about-us">
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2">О нас</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="footer-link" href="/about-telegram-bot">
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2">О телеграм боте</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="footer-link" href="/agreements/privacy-policy">
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2">Пользовательское соглашение</span>
+                  </a>
+                </li>
+                <li>
+                  <a class="footer-link" href="/?uwu=true">
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2">UwU?</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
