--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
       <div class="py-5 footer-wrapper">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 mobile-mb-3">
+            <div class="col-lg-4 mobile-mb-3">
               <div class="h4">
                 <a class="footer-link" href="/">Techinterview.space</a>
               </div>
@@ -74,7 +74,7 @@
               </div>
             </div>
 
-            <div class="col-md-4 mobile-mb-3">
+            <div class="col-lg-4 mobile-mb-3">
               <div class="h4">Наши друзья</div>
               <ul class="mt-3 no-bullets">
                 <li>
@@ -115,10 +115,52 @@
                     >
                   </a>
                 </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://t.me/productskz"
+                    target="_blank"
+                    title="Сообщество продактов в Телеграм"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2"
+                      >ТГ-канал Products.kz (Kolesa Group)</span
+                    >
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://t.me/kzqacommunity"
+                    target="_blank"
+                    title="Сообщество QA специалистов в Телеграм"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2"
+                      >ТГ-канал KZ QA Community (Kolesa Group)</span
+                    >
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://t.me/teamleadkz"
+                    target="_blank"
+                    title="Сообщество тимлидов в Телеграм"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2"
+                      >ТГ-канал Сообщество тимлидов KZ (Kolesa Group)</span
+                    >
+                  </a>
+                </li>
               </ul>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="h4">Ссылки</div>
               <ul class="mt-3 no-bullets">
                 <li>
