--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta
       name="description"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+      content="Зарплаты в IT и отзывы о компаниях в Казахстане. Цифры, графики, звездочки. Всё как все мы любим"
     />
     <meta
       name="googlebot"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+      content="Зарплаты в IT и отзывы о компаниях в Казахстане. Цифры, графики, звездочки. Всё как все мы любим"
     />
     <meta
       name="keywords"
@@ -25,7 +25,7 @@
     <meta property="og:title" content="techinterview.space" />
     <meta
       property="og:description"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+      content="Зарплаты в IT и отзывы о компаниях в Казахстане. Цифры, графики, звездочки. Всё как все мы любим"
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://techinterview.space" />
@@ -46,7 +46,7 @@
     <meta name="twitter:title" content="techinterview.space" />
     <meta
       name="twitter:description"
-      content="Зарплаты в IT в Казахстане. Цифры, графики, фильтр. Всё как все мы любим"
+      content="Зарплаты в IT и отзывы о компаниях в Казахстане. Цифры, графики, звездочки. Всё как все мы любим"
     />
     <meta name="twitter:site" content="@techinterview" />
     <meta name="twitter:creator" content="@maximgorbatyuk" />
