--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,34 @@
             </div>
 
             <div class="col-lg-4 mobile-mb-3">
-              <div class="h4">Наши друзья</div>
+              <div class="h4">Наши проекты</div>
               <ul class="mt-3 no-bullets">
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://t.me/techinterview_salaries_bot"
+                    target="_blank"
+                    title="Бот для получения зарплатных данных"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2"
+                      >TG бот &#64;techinterview_salaries_bot</span
+                    >
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://t.me/github_profile_bot"
+                    target="_blank"
+                    title="Бот для получения статистики по профилю Github"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-chevron-right"></i
+                    ><span class="ms-2">TG бот &#64;github_profile_bot</span>
+                  </a>
+                </li>
                 <li>
                   <a
                     class="footer-link"
@@ -87,74 +113,6 @@
                   >
                     <i class="bi bi-chevron-right"></i
                     ><span class="ms-2">База знаний по ИП в Казахстане</span>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="footer-link"
-                    href="https://t.me/Projects_KZ"
-                    target="_blank"
-                    title="Сообщество проектных менеджеров в Телеграм"
-                    rel="noopener noreferrer"
-                  >
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2">ТГ-канал @Projects_KZ</span>
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="footer-link"
-                    href="https://t.me/backenderskz"
-                    target="_blank"
-                    title="Сообщество бэкендеров в Телеграм"
-                    rel="noopener noreferrer"
-                  >
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2"
-                      >ТГ-канал @backenderskz (Kolesa Group)</span
-                    >
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="footer-link"
-                    href="https://t.me/productskz"
-                    target="_blank"
-                    title="Сообщество продактов в Телеграм"
-                    rel="noopener noreferrer"
-                  >
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2"
-                      >ТГ-канал Products.kz (Kolesa Group)</span
-                    >
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="footer-link"
-                    href="https://t.me/kzqacommunity"
-                    target="_blank"
-                    title="Сообщество QA специалистов в Телеграм"
-                    rel="noopener noreferrer"
-                  >
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2"
-                      >ТГ-канал KZ QA Community (Kolesa Group)</span
-                    >
-                  </a>
-                </li>
-                <li>
-                  <a
-                    class="footer-link"
-                    href="https://t.me/teamleadkz"
-                    target="_blank"
-                    title="Сообщество тимлидов в Телеграм"
-                    rel="noopener noreferrer"
-                  >
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2"
-                      >ТГ-канал Сообщество тимлидов KZ (Kolesa Group)</span
-                    >
                   </a>
                 </li>
               </ul>
