--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
                 <li>
                   <a class="footer-link" href="/about-telegram-bot">
                     <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2">О телеграм боте</span>
+                    ><span class="ms-2">О ботах в Telegram</span>
                   </a>
                 </li>
                 <li>
