--- a/src/index.html
+++ b/src/index.html
@@ -152,8 +152,8 @@
       </div>
     </div>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        var yearElement = document.getElementById('current-year');
+      document.addEventListener("DOMContentLoaded", function () {
+        var yearElement = document.getElementById("current-year");
         if (yearElement) {
           yearElement.textContent = new Date().getFullYear();
         }
