--- a/src/index.html
+++ b/src/index.html
@@ -134,10 +134,8 @@
                     title="Бот для получения зарплатных данных"
                     rel="noopener noreferrer"
                   >
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2"
-                      >TG бот &#64;techinterview_salaries_bot</span
-                    >
+                    <i class="bi bi-telegram"></i
+                    ><span class="ms-2">&#64;techinterview_salaries_bot</span>
                   </a>
                 </li>
                 <li>
@@ -148,8 +146,8 @@
                     title="Бот для получения статистики по профилю Github"
                     rel="noopener noreferrer"
                   >
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2">TG бот &#64;github_profile_bot</span>
+                    <i class="bi bi-telegram"></i
+                    ><span class="ms-2">&#64;github_profile_bot</span>
                   </a>
                 </li>
                 <li>
@@ -160,8 +158,32 @@
                     title="База знаний по ИП в Казахстане"
                     rel="noopener noreferrer"
                   >
-                    <i class="bi bi-chevron-right"></i
+                    <i class="bi bi-dot"></i
                     ><span class="ms-2">База знаний по ИП в Казахстане</span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://mgorbatyuk.dev/ev-charging-tracker/"
+                    target="_blank"
+                    title="EV charging tracker"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-dot"></i
+                    ><span class="ms-2">EV charging tracker (iOS)</span>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer-link"
+                    href="https://mgorbatyuk.dev/journey-wallet/"
+                    target="_blank"
+                    title="Journey wallet"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-dot"></i
+                    ><span class="ms-2">Journey wallet (iOS)</span>
                   </a>
                 </li>
               </ul>
@@ -172,26 +194,24 @@
               <ul class="mt-3 no-bullets">
                 <li>
                   <a class="footer-link" href="/about-us">
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2">О нас</span>
+                    <i class="bi bi-dot"></i><span class="ms-2">О нас</span>
                   </a>
                 </li>
                 <li>
                   <a class="footer-link" href="/about-telegram-bot">
-                    <i class="bi bi-chevron-right"></i
+                    <i class="bi bi-dot"></i
                     ><span class="ms-2">О ботах в Telegram</span>
                   </a>
                 </li>
                 <li>
                   <a class="footer-link" href="/agreements/privacy-policy">
-                    <i class="bi bi-chevron-right"></i
+                    <i class="bi bi-dot"></i
                     ><span class="ms-2">Пользовательское соглашение</span>
                   </a>
                 </li>
                 <li>
                   <a class="footer-link" href="/?uwu=true">
-                    <i class="bi bi-chevron-right"></i
-                    ><span class="ms-2">UwU?</span>
+                    <i class="bi bi-dot"></i><span class="ms-2">UwU?</span>
                   </a>
                 </li>
               </ul>
