Last steps for GEO and SEO

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       media="(prefers-color-scheme: dark)"
     />
 
-    <meta property="og:title" content="techinterview.space" />
+    <meta property="og:title" content="Techinterview.space" />
     <meta
       property="og:description"
       content="Зарплаты в IT и отзывы о компаниях в Казахстане. Цифры, графики, звездочки. Всё как все мы любим"
@@ -54,7 +54,7 @@
       name="twitter:image"
       content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
     />
-    <meta name="twitter:title" content="techinterview.space" />
+    <meta name="twitter:title" content="Techinterview.space" />
     <meta
       name="twitter:description"
       content="Зарплаты в IT и отзывы о компаниях в Казахстане. Цифры, графики, звездочки. Всё как все мы любим"
