--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 
     <meta
       name="twitter:card"
-      content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
+      content="summary_large_image"
     />
     <meta
       name="twitter:image"
@@ -143,6 +143,7 @@
                   class="footer-link"
                   href="https://mgorbatyuk.dev"
                   target="_blank"
+                  rel="noopener noreferrer"
                   >© maximgorbatyuk</a
                 >
               </div>
