--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,7 @@
     />
     <meta property="og:site_name" content="Techinterview.space" />
 
-    <meta
-      name="twitter:card"
-      content="summary_large_image"
-    />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
       content="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_500.png"
